--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
   <body>
 
-cicket
+<a href="https://www.mallorcacarhirecompany.com/"> </a> 
+<a href="https://democraciarealya.es/"> </a>
 
 </body>
 </html>
